# dlint

./: .appveyor.yml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
dlint/: __init__.py  extension.py  multi.py  namespace.py  tree.py  util.py
dlint/linters/: __init__.py  bad_commands_use.py  bad_compile_use.py  bad_cryptography_module_attribute_use.py  bad_defusedxml_use.py  bad_dl_use.py  (+32 more)
docs/: README.md
tests/: test_bad_commands_use.py  test_bad_compile_use.py  test_bad_cryptography_module_attribute_use.py  test_bad_defusedxml_use.py  test_bad_dl_use.py  test_bad_duo_client_use.py  test_bad_eval_use.py  test_bad_exec_use.py  test_bad_gl_use.py  test_bad_hashlib_use.py  test_bad_input_use.py  test_bad_itsdangerous_kwarg_use.py  test_bad_marshal_use.py  test_bad_onelogin_kwarg_use.py  test_bad_onelogin_module_attribute_use.py  test_bad_os_use.py  test_bad_pickle_use.py  test_bad_popen2_use.py  test_bad_pycrypto_use.py  test_bad_random_generator_use.py  test_bad_re_catastrophic_use.py  test_bad_requests_use.py  test_bad_shelve_use.py  test_bad_ssl_module_attribute_use.py  test_bad_subprocess_use.py  test_bad_sys_use.py  test_bad_tarfile_use.py  test_bad_tempfile_use.py  test_bad_urllib3_kwarg_use.py  test_bad_urllib3_module_attribute_use.py  test_bad_xml_use.py  test_bad_xmlrpc_use.py  test_bad_xmlsec_module_attribute_use.py  test_bad_yaml_use.py  test_bad_zipfile_use.py  test_extension.py  test_input_password_ask.py  test_namespace.py  test_tree.py  test_util.py
(+53 files in other folders)
